blog post added to news page

--- a/news.html
+++ b/news.html
@@ -123,6 +123,31 @@
 				<div class="posts">
 					<div class="blogPosts">
 						<div class="profile">
+							<h3>Shabrul Uddin</h3>
+							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="lozad linkedinBlack" src="images/social/black/linkedin.png" ></a>
+							<img alt="Shabrul Uddin profile picture" class="lozad profileImg" src="images/Shabs.jpg">
+						</div>
+						<div class="blogContent">
+							<h3>Four key tasks you can complete that will help you choose the right Network Managed Service Provider.</h3>
+							<p>We all know there is no shortage of carriers and Managed Service Providers on the market.  All of whom are willing and eager to do business, offering you the service that you want. How do you ensure that the one you choose is ‘the best partner’ for your organisation?</p>
+							<p>Having worked in the Managed Services Provider space, both procuring and selling, here are four simple tasks you can complete that will help you pick the network MSP that’s right for you.</p>
+							<h4>1. Set your objectives</h4>
+							<p>Before you start your search for a Network MSP, you need to have a clear scope of what you’re looking to achieve.</p>
+							<p>In the majority of cases, you will have an existing provider who has historically failed to deliver, you think is too expensive or they haven’t adapted their services to your business needs. With the advent of SD-WAN, Network MSPs definitely need to think differently.</p>
+							<p>There will always be problems; price, resource, service or internal skills gap that you need addressing. You may also think that the direction of travel for your business applications now means you want to leverage new technologies to facilitate digital transformation, or simply relieve the burden on your technical team.</p>
+							<p>Also, be sure to set clear objectives, whether through a formal RFP process or something a little more lightweight, you’ll need to benchmark success. These will form your brief, which you can then share with prospective MSPs.</p>
+							<h4>2. Simple due diligence?</h4>
+							<p>I know for a fact that not all MSPs are created equal and going thorough good due diligence allows you to quickly qualify prospective Network MSPs in or out.</p>
+							<p>Create a list of questions that covers a range of outcomes, across both technical and service operations, including: their ability to understand your brief, referenceability, processes and technical evolution. You can then assess their responses and shortlist those you are confident in.</p>
+							<h4>3. Know the Delivering Team</h4>
+							<p>As you’ll be working closely with the new network MSP, as well as placing a huge amount of faith in them, you should take the time to get to know them. Good MSPs work in partnership, bad ones rarely speak to you after they have you as a client. I cannot stress how important it is to understand the people capability, who the key stakeholders are and where your service will be run from. Finally understand how their company has evolved and what their roadmap is for adjacent and complimentary services and how they are improving KPIs and SLAs.</p>
+							<h4>4. Make sure your strategy fits with an Agile provider</h4>
+							<p>What your business needs from technology and your IT infrastructure will change over the course of your contract and it is therefore critical that your Network MSP can evolve with you. </p>
+							<p>There are countless Network MSPs that have a strategy to sell you more MPLS or high bandwidth circuits, however in most use cases this is not needed with the drive to digital transformation. SD-WAN capability is now critical to future organisation network strategy, so make sure the network MSP has a roadmap for this that is aligned to your technology roadmap. Only then can you be confident that your network is in safe hands for the years ahead.</p>
+						</div>
+					</div>
+					<div class="blogPosts">
+						<div class="profile">
 							<h3>Andy Weedon</h3>
 							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="lozad linkedinBlack" src="images/social/black/linkedin.png" ></a>
 							<img alt="Andy Weedon profile picture" class="lozad profileImg" src="images/Andy.jpg">
