--- a/sd-wan.html
+++ b/sd-wan.html
@@ -123,8 +123,8 @@
 
 		<section id="SDwanMain">
 			<div aria-hidden="true" class="blackTriangleSD"></div>
-			<img class="sdImg lozad" src="images/SDbenefits.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
-			<img class="sdImgLarge lozad" src="images/SDbenefitslarge.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
+			<img class="sdImg lozad" src="images/SDbenefits.png" alt="The benefits of SD-wan include: greater agility, increased performance, advanced control, robust security, third party extension, cloud-first">
+			<img class="sdImgLarge lozad" src="images/SDbenefitslarge.png" alt="The benefits of SD-wan include: greater agility, increased performance, advanced control, robust security, third party extension, cloud-first">
 		</section>
 
 		<section class="SDeasy">
