--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -235,7 +235,7 @@
 		</div>
 		<div class="footerTFM">
 				<h3>TFM GROUP</h3>
-				<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/" >Home</a>
+				<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/">Home</a>
 				<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/products/">Products</a>
 				<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/services/">Services</a>
 				<a rel="noopener" target="_blank" href="https://tfmnetworks.livevacancies.co.uk/#/">Careers</a>
@@ -245,9 +245,8 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<!-- <script src="main.js"></script> -->
 <script src="min-main.js"></script>
-<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+<!-- <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script> -->
 
 </body>
 </html>
