chatbot link change, js listener removed

--- a/index.html
+++ b/index.html
@@ -114,12 +114,15 @@
 			<a href="#services_section"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" class="lozad" src="images/dropD.png"></a>
 
 		</div>
-		<div class="chat">
+		<!-- <div class="chat">
 				<img alt="Lets chat bubble above chat icon" class="chattext lozad" onclick="openChat()" src="images/chattext.png">
 				<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble lozad" onclick="openChat()" src="images/chatbubble.png">
 				<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat lozad" src="images/closeChat.png">
-		</div>
-			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
+		</div> -->
+			<!-- <iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe> -->
+			<link href="https://snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css"><link href="https://snatchbot.me/custom/55830.css" rel="stylesheet" type="text/css"><script src="https://snatchbot.me/sdk/webchat.min.js"></script><script> Init('?botID=55830&appID=webchat', 600, 600, 'https://dvgpba5hywmpo.cloudfront.net/media/image/xQQrLzIbPzp1Q1698DGgm1VO8', 'bubble', '#FFFFFF', 90, 90, 62.99999999999999, '', '1', '#FFFFFF', '#FFFFFF', 0); /* for authentication of its users, you can define your userID (add &userID={login}) */ </script>
+
+
 			<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 		<section id="services_section">
 			
@@ -215,7 +218,7 @@
 						</div>
 						<div class="reasonScroll" id="third">
 							<h3>4 WE ARE SD-WAN SPECIALISTS</h3>			
-							<p>We scope, implement and enhance network infrastructure services that meet the requirements of pecialised sector practices and associated regulatory needs.</p>
+							<p>We scope, implement and enhance network infrastructure services that meet the requirements of specialised sector practices and associated regulatory needs.</p>
 						</div>
 					</div>
 					<div class="reasonsEnd">
