--- a/services.html
+++ b/services.html
@@ -114,13 +114,14 @@
 			<a href="#servicesMain"><img class="lozad" role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
-		<div class="chat">
+		<!-- <div class="chat">
 			<img alt="Lets chat bubble above chat icon" class="lozad chattext" onclick="openChat()" src="images/chattext.png">
 			<img alt="chat bubble to open chat window and start chatting with Aequos" class="lozad chatbubble" onclick="openChat()" src="images/chatbubble.png">
 			<img alt="X that closes the text inviting to chat above chatbubble image" class="lozad closeChat" src="images/closeChat.png">
 	</div>
 		<iframe title="Aequos chatbot" class="lozad bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
-		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
+		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p> -->
+		<link href="https://snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css"><link href="https://snatchbot.me/custom/55830.css" rel="stylesheet" type="text/css"><script src="https://snatchbot.me/sdk/webchat.min.js"></script><script> Init('?botID=55830&appID=webchat', 600, 600, 'https://dvgpba5hywmpo.cloudfront.net/media/image/xQQrLzIbPzp1Q1698DGgm1VO8', 'bubble', '#FFFFFF', 90, 90, 62.99999999999999, '', '1', '#FFFFFF', '#FFFFFF', 0); /* for authentication of its users, you can define your userID (add &userID={login}) */ </script>
 		<section id="servicesMain">
 			<div class="servicesMainListed" id="bronze">
 				<div class="serviceContainer">
