--- a/about_us.html
+++ b/about_us.html
@@ -123,7 +123,7 @@
 
 		<section id="aboutUsVideo">
 			<h2>Learn about how a unified SD-WAN provides quality of experience, <br>from our partner <a rel="noopener" target="_blank" href="https://www.silver-peak.com/">Silver Peak.</a></h2>
-				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe title="Optimise quality of IT experience using SD-WAN" src='https://www.youtube.com/embed/pw-YoWq6SwI' frameborder='0' allowfullscreen></iframe></div>
+				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe title="Optimise quality of IT experience using SD-WAN" src='https://www.youtube.com/embed/aCEOiGxRLS8' frameborder='0' allowfullscreen></iframe></div>
 		</section>
 
 		<section id="aboutMainDescription">
